@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-25T08:25:10Z",
-  "count_outdated" : 2438,
-  "uniques_outdated" : 606,
-  "count" : 2475,
-  "uniques" : 628,
+  "timestamp" : "2022-09-25T16:27:10Z",
+  "count_outdated" : 2441,
+  "uniques_outdated" : 608,
+  "count" : 2478,
+  "uniques" : 629,
   "clones" : [
-    {
-      "timestamp": "2022-09-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-09-12T00:00:00Z",
       "count": 3,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-09-25T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
