@@ -3,11 +3,6 @@
   "uniques": 7,
   "clones": [
     {
-      "timestamp": "2022-09-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-09-12T00:00:00Z",
       "count": 3,
       "uniques": 1
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-09-25T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
