@@ -1,3 +1,11 @@
+2022-09-25T16:27:10Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3122862774
+* notice: last 14d: unq all: 7 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 606 2438 / 628 2475
+* notice: next accum: outdated-unq outdated-all / unq all: 608 2441 / 629 2478
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [2022-09-11] / [2022-09-25]
+
 2022-09-25T08:25:10Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3121465625
 * notice: last 14d: unq all: 7 37
